<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_usage_state_TXT_orderBy"
                android:text="@string/sorted_by"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/activity_usage_state_SPINNER"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/usage_stats_display_order_types"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/only_used_apps"
                    />

                <CheckBox
                    android:id="@+id/activity_usage_stats_CHK_show_all_apps"
                    android:layout_width="28dp"
                    android:layout_height="24dp"
                    android:checked="true"
                    />

                <ImageView
                    android:id="@+id/activity_usage_IMG_sort_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                    />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
            <TextView
                android:text="@string/usage_state_TXT_header_app_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_marginStart="12dp"
                android:layout_height="wrap_content"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:text="@string/usage_state_TXT_header_last_used_time"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_weight="2"
                android:layout_marginStart="48dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/usage_state_TXT_header_time_used"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ListView android:id="@+id/pkg_list"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>